Fixing spacing issues in the navbar again

--- a/mystyle.css
+++ b/mystyle.css
@@ -99,7 +99,6 @@ font-size: 20px;
 @media (max-width: 767px) {
     /* CSS goes here */
 	.navbar {
-	height: 1vh;
 	background-color: #1A1A1A;
 	background: #1A1A1A;
 	border-color: #1A1A1A;
